drop down menu items z-index 100 (safari/ipad issue)

--- a/app/assets/stylesheets/nav.css.scss
+++ b/app/assets/stylesheets/nav.css.scss
@@ -28,6 +28,7 @@ nav.navbar{
         li{
           font-size: 1.4em;
           a:hover {background: none;}
+          z-index: 100;
         }
 
       }
